[package]
name = "etcd-version-history"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
etcd-client = "0.12"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.21.5"
